# Herzen_curse_3

./: README.md
prog/lab-1/: activation_script.py  lab-1.md
prog/lab-1/img/: desktop.ini
prog/lab-1/rootserver/: myremotemodule.py
prog/lab-10/: lab-10.ipynb
prog/lab-11/: lab-11.ipynb
prog/lab-12/: lab-12.ipynb
prog/lab-2/: even_numbers_iterator.py  gen_fib.py  lab-2.md  test_fib.py
prog/lab-2/img/: desktop.ini
prog/lab-3/: lab-3.md  test.py
prog/lab-3/openweather-for-lab-3/: LICENSE  README.md  pyproject.toml
prog/lab-3/openweather-for-lab-3/weather/: __init__.py
prog/lab-4/: lab-4.md
prog/lab-4/python-glossary-api/: .dockerignore  Dockerfile  docker-compose.yml  generate_docs.py  requirements.txt
prog/lab-5/: lab-5.md
prog/lab-5/grpc-glossary/: .dockerignore  Dockerfile  codegen.sh  docker-compose.yml  requirements.txt
prog/lab-6/: lab-6.md  run.py
prog/lab-6/app/: __init__.py  cbr_client.py  models.py  observer.py  server.py
prog/lab-7/: lab-7.md
prog/lab-7/counter-deploy/: .env.example  README.md  REPORT.md  docker-compose.yml
prog/lab-8/: lab-8.md
prog/lab-8/Tester/: hugo.toml
prog/lab-8/hugo-base/: .markdownlint-cli2.yaml  (+2 more)
study_pract/: ~$чет_3курс_БолотовКА-1.docx  задание_3курс_БолотовКА-1.docx  задание_3курс_БолотовКА.docx  отчет_3курс_БолотовКА-1.docx  отчет_3курс_БолотовКА.docx
study_pract/1.1._ИСР/: Отчет_1.1._ИСР.docx
study_pract/1.2._ИСР/: Отчет_1.2._ИСР.docx
study_pract/1.3._ИСР/: Отчет_1.3._ИСР.docx
study_pract/2.1._ВСР/: Отчет_2.1._ВСР.docx  Отчет_2.1._ВСР.md
study_pract/2.2._ВСР/: Отчет_2.2._ВСР.docx
(+53 files in other folders)
