[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openweather-for-lab-3"
version = "0.1.3"
description = "Простой клиент для OpenWeatherMap API"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Kostya", email = "kostyab2@mail.ru" }]
dependencies = ["requests"]
